DBMankdrake's first drafts for testing

--- a/resources/emulationstation.service
+++ b/resources/emulationstation.service
@@ -1,1 +1,14 @@
-# @dbmandrake - your code here!
+[Unit]
+Description=Emulation Station
+After=systemd-vconsole-setup.service
+
+[Service]
+Type=simple
+WorkingDirectory=/home/osmc/RetroPie/scripts
+ExecStart=/home/osmc/RetroPie/scripts/launch.sh
+StandardInput=tty-force
+StandardOutput=tty-force
+TTYPath=/dev/tty1
+
+[Install]
+WantedBy = multi-user.target
