--- a/resources/evdev-exit.service
+++ b/resources/evdev-exit.service
@@ -5,6 +5,7 @@ Description=Monitors a gamepad for a button combination to exit RetroPie and ret
 Type=simple
 WorkingDirectory=/home/osmc/RetroPie/scripts
 ExecStart=/home/osmc/RetroPie/scripts/evdev-exit.py
+ExecStop=/home/osmc/RetroPie/scripts/evdev-helper.sh KILL 0 EXIT
 
 [Install]
 WantedBy=multi-user.target
